# http-gateway

./: .cz.yaml  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  dfx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: build-and-test.yml  publish.yml
docs/: HTTP_CANISTER_BINDINGS.md
examples/http-canister-client/nodejs/: README.md  index.mjs  package.json
examples/http-gateway/canister/: README.md
examples/http-gateway/canister/src/assets/: 1mb.json  2mb.json
examples/http-gateway/canister/src/custom_assets/: Cargo.toml
examples/http-gateway/canister/src/custom_assets/src/: lib.rs
examples/http-gateway/cloudflare/: README.md  package.json  tsconfig.json  typings.d.ts  worker-configuration.d.ts  wrangler.json
examples/http-gateway/cloudflare/src/: index.ts
examples/http-gateway/rust/: Cargo.toml
examples/http-gateway/rust/src/: main.rs
scripts/: download-pocket-ic.sh
