[workspace]
resolver = "2"

members = [
    "examples/http-gateway/canister/src/custom_assets",
    "examples/http-gateway/rust",
    "packages/ic-http-gateway",
]

# https://github.com/rust-lang/cargo/issues/9406
# includes all members except those that must be compiled to WASM
default-members = ["packages/ic-http-gateway"]

[workspace.package]
version = "0.2.0"
authors = ["DFINITY Stiftung"]
edition = "2021"
repository = "https://github.com/dfinity/http-gateway"
homepage = "https://github.com/dfinity/http-gateway#readme"
license = "Apache-2.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[workspace.dependencies]
thiserror = "1"
futures = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
base64 = "0.22"
lazy_static = "1"
rand_chacha = "0.3"
serde = "1"
serde_cbor = "0.11"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"

ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-agent = "0.39"
ic-utils = "0.39"
candid = "0.10"
pocket-ic = "6.0"
assert_matches = "1.5"
rstest = "0.18"

ic-response-verification = "3"
ic-certification = "3"
ic-http-certification = "3"
ic-asset-certification = "3"

ic-http-gateway = { path = "./packages/ic-http-gateway", version = "0.2.0" }
