[package]
name = "http_gateway_canister_custom_assets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
serde.workspace = true
serde_cbor.workspace = true
lazy_static.workspace = true
base64.workspace = true
include_dir = { version = "0.7", features = ["glob"] }

ic-certification = { git = "https://github.com/dfinity/response-verification" }
ic-http-certification = { git = "https://github.com/dfinity/response-verification", features = ["serde"] }
ic-asset-certification = { git = "https://github.com/dfinity/response-verification" }
