[package]
name = "http_gateway_canister_custom_assets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
serde.workspace = true
serde_cbor.workspace = true
sha2.workspace = true
lazy_static.workspace = true
base64.workspace = true
include_dir = { version = "0.7", features = ["glob"] }
rand_chacha.workspace = true

ic-certification.workspace = true
ic-http-certification.workspace = true
ic-asset-certification.workspace = true
